# Browser_scrape_mcp

./: Dockerfile  README.md  client.py  main.py  pyproject.toml  requirements.txt  smithery.yaml  smithery.yml
.github/actions/: ci.yaml
.github/workflows/: ci.yaml
